--- a/front-mobile/package.json
+++ b/front-mobile/package.json
@@ -18,8 +18,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "dayjs": "^1.10.3",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
+    "expo-cli": "^4.0.17",
     "expo-font": "~8.4.0",
     "expo-localization": "^9.1.0",
     "expo-status-bar": "~1.0.3",
